[FEAT] 현재 Product-Service Controller와 모두 통신 완료, 테스트 코드 미작성